--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,8 +1,9 @@
 blinker==1.6.2
 click==8.1.3
-Flask==2.3.2
+Flask==2.2.5
+gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
-numpy==1.24.3
-Werkzeug==2.3.4
+numpy==1.21.6
+Werkzeug==2.2.3
